--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -304,5 +304,6 @@ ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
 
 END OF TERMS AND CONDITIONS"
 </string>
+    <string name="version_number">SDR Bridge v1.01</string>
 
 </resources>
